# ATIRE

./: .gitignore  .hgignore  GNUmakefile  GNUmakefile.defns  GNUmakefile.dependencies  GNUmakefile.iOS  Makefile.am  README  README.md  configure  configure.ac  link_index.bat  makefile  makefile.dependencies  makefile.dependencies.unix  makefile.unix
AtireJ/: index.sh
CliX/: .classpath  .project  runClix.sh  runClixCJK0.sh  runClixCJK1.sh  runClixCJKTopics.sh
Docs/: index-structure-v2.odg  index-structure.odg  lzo.txt  zlib-and-bzip2.txt
Link-The-Wiki/: README.lyx  README.txt  disk_internals.c  disk_internals.h  how_to_get_a_wikipedia_article_given_the_id.txt  link_extract.c  link_extract_pass2.c  link_index.c  link_index_merge.c  link_length_correlate.c  link_parts.h  link_this.c  makefile  makefile.unix  noun_boost.bat  remove_head.c  title_extract.c
ant_linux/: makefile
atire/: ant_param_block.c  ant_param_block.h  atire.c  atire_api.c  atire_api.h  atire_api_remote.c  atire_api_remote.h  atire_api_remote.swig  atire_broke.c  atire_broke_engine.c  atire_broke_engine.h  atire_broker.c  atire_client.c  atire_client_param_block.c  atire_client_param_block.h  atire_dictionary.c  atire_doclist.c  atire_engine.h  atire_engine_param_block.h  atire_engine_result.h  atire_engine_result_set.c  atire_engine_result_set_export.h  atire_engine_result_set_export_INEX_snippet.h  atire_merge.c  atire_reorder.c  atire_tar.c  get_doclist.c  index.c  indexer_param_block.c  indexer_param_block.h  indexer_param_block_rank.c  indexer_param_block_rank.h  indexer_param_block_stem.c  indexer_param_block_stem.h  indexer_param_block_topsig.c  indexer_param_block_topsig.h  merger_param_block.c  merger_param_block.h
bzip/: GNUmakefile  makefile.msc
cgi/: GNUmakefile  ant_cgi.c  ant_getdoc_cgi.c  env.c  footer.htm  header.h  index.htm  makefile
compression/: instream_deflate.c  instream_deflate.h  instream_deflate_internals.h  instream_file.c  main.c  makefile  stream_tar.c  stream_tar.h  stream_tar_file_header.h  tar.c  tar.h
db/: uuid
edit/: bitmapinfor256.h  canvas.bak  canvas.c  canvas.h  edit_renderer.h  line.c  line.h  (+18 more)
java/jni/: Android.mk  Application.mk  Makefile.am  README.TXT  atire.swig  atire_wrap.cxx  glob.c  swig.sh
java/jni/include/: atire.h  index.h
java/jni/test/: index_test.c
plugins/: Makefile.am  README.TXT  char.h  clist.c  clist.h  convert.h  cwords.c  cwords.h  dic.c  dic.h  dic_builder.c  dic_builder.h  doc.c  doc.h  doc_base.c  doc_base.h  doc_freq.c  doc_reader.c  doc_reader.h  doc_seg.c  doc_seg.h  encoding.h  encoding_ascii.h  encoding_factory.c  encoding_factory.h  encoding_utf8.c  encoding_utf8.h  fdoc.c  file.c  file.h  freq.c  freq.h  freq_counter.c  freq_counter.h  freq_file.c  freq_file.h  freq_loader.c  freq_loader.h  index_file.c  index_file.h  (+23 more)
plugins/test/: uniseg.c
source/: INEX_assessment.c  INEX_assessment.h  Makefile.am  Makefile.am.bak  NEXI.h  NEXI_ant.c  NEXI_ant.h  NEXI_term.c  NEXI_term.h  NEXI_term_ant.c  NEXI_term_ant.h  NEXI_term_iterator.c  NEXI_term_iterator.h  ant.c  ant_ant.c  ant_api.c  ant_api.h  ant_dictionary.c  ant_param_block.c  ant_param_block.h  ant_params.h  ant_plugins.c  arithmetic_coding.c  arithmetic_coding.h  arithmetic_coding_decoder.h  arithmetic_coding_encoder.h  arithmetic_model.h  arithmetic_model_bigram.c  arithmetic_model_bigram.h  arithmetic_model_tables.c  arithmetic_model_tables.h  arithmetic_model_unigram.c  arithmetic_model_unigram.h  assessment.c  assessment.h  assessment_ANT.c  assessment_ANT.h  assessment_INEX.c  assessment_INEX.h  assessment_TREC.c  (+620 more)
uniseg/: .cproject  .project  AUTHORS  Makefile.am  README  address.h  char.h  clist.c  clist.h  config.c  config.h  configure.ac  cwords.c  cwords.h  dic.c  dic.h  dic2freq.c  dic2freq.h  dic_builder.c  dic_builder.h  encoding.h  encoding_ascii.h  encoding_factory.c  encoding_factory.h  encoding_utf8.c  encoding_utf8.h  file.c  file.h  freq.c  freq.h  freq_counter.c  freq_counter.h  freq_file.c  freq_file.h  freq_loader.c  freq_loader.h  index_file.c  index_file.h  qfreq.c  qfreq.h  (+21 more)
uniseg/test/: stopword.c  uniseg.c
xlink/: .cproject  .project  Makefile.am  README.TXT  algorithm.conf  algorithm_ant_link_this_and_page_name.conf  configure.ac  gen.sh  ltaratw_a2b.conf  ltw.conf  test_ltw.sh
xlink/include/: XML2TXT.h  pattern_singleton.h
xlink/include/stpl/spec/: default.h  property.h  text.h
xlink/include/stpl/stpl/: stpl_doc.h  stpl_entity.h  stpl_entity.tcc  stpl_exception.h  stpl_grammar.h  stpl_keyword.h  stpl_log.h  stpl_othertraits.h  stpl_parser.h  stpl_property.h  stpl_rule.h  stpl_scanner.h  stpl_simple.h  stpl_stream.h  stpl_stream.tcc  stpl_typetraits.h  stpl_unichar.h  stpl_unigrammar.h  stpl_uniword.h  stpl_word.h
xlink/include/stpl/stpl/characters/: stpl_character.h  stpl_chinese.h  stpl_unicode.h  stpl_uscanner.h
xlink/include/stpl/stpl/html/: stpl_html.h  stpl_html_entity.h
xlink/include/stpl/stpl/misc/: stpl_trec.h
xlink/include/stpl/stpl/xml/: stpl_xml.h  stpl_xml_basic.h  stpl_xml_entity.h
xlink/include/stpl/utils/: archive.h  charset_converter.h  fs.h  icstring.h
xlink/src/: algorithm.conf  algorithm.cpp  algorithm.h  algorithm_ant_crosslink_this.cpp  algorithm_ant_crosslink_this.h  algorithm_ant_link_this.cpp  algorithm_ant_link_this.h  algorithm_ant_link_this_and_page_name.cpp  algorithm_ant_link_this_and_page_name.h  algorithm_bep.cpp  algorithm_bep.h  algorithm_config.cpp  algorithm_config.h  algorithm_ltara_base.cpp  algorithm_ltara_base.h  algorithm_ltw_incoming_a2b_search_tn.cpp  algorithm_ltw_incoming_a2b_search_tn.h  algorithm_ltw_incoming_search_tn.cpp  algorithm_ltw_incoming_search_tn.h  algorithm_ltw_tang.cpp  algorithm_ltw_tang.h  algorithm_out.cpp  algorithm_out.h  algorithm_page_name.cpp  algorithm_page_name.h  ant_link.cpp  ant_link.h  ant_link_parts.h  ant_link_posting.cpp  ant_link_posting.h  ant_link_term.cpp  ant_link_term.h  application_out.cpp  application_out.h  cmdline_options.cpp  cmdline_options.h  config.cpp  config.h  corpus.cpp  corpus.h  (+83 more)
xlink/tools/: collection_link_finder.cpp
(+372 files in other folders)
